# dwell

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  cli.py  pyproject.toml  requirements.txt  run.sh
compendium/: __init__.py  config.py  models.py
compendium/agents/: __init__.py  base.py  enrichment.py  explorer.py  grounding.py  ingest_orchestrator.py  ingest_router.py  linter.py  mender.py  page_writer.py  research_agent.py  reviewer.py  structured_ingest.py
compendium/guardrails/: __init__.py  batch.py  cost_tracker.py
compendium/llm/: __init__.py  anthropic_compat.py  providers.py
compendium/repl/: __init__.py  environment.py  functions.py  rlm_child.py  sandbox.py
compendium/sources/: __init__.py  asset_capture.py  book_splitter.py  pdf_fetcher.py  pdf_image_extractor.py  transcript_fetcher.py  verifier.py  vision_provider.py
compendium/vault/: __init__.py  backlog.py  contradiction_ledger.py  history.py  index.py  layout.py  links.py  (+5 more)
docs/: DWELL_APP_PLAN.md  DWELL_CREED.md  DWELL_ENRICH_PLAN.md  DWELL_HANDOFF.md  DWELL_HAND_PLAN.md  DWELL_LEARN_PLAN.md  DWELL_LEARN_PRIOR_ART.md  DWELL_OKF.md  DWELL_PATHS.md  DWELL_ROADMAP.md  DWELL_TEXT_FIGURES_PLAN.md  DWELL_THREAD_PLAN.md  DWELL_VOICES.md  IMAGE_CYCLING_PLAN.md  IMAGE_SOURCING.md  MERCURY_PROMPT_GUIDE.md  README.md  VAULT_FORMAT.md  compendiums-as-agent-skills.md  compendiums-meet-rlm.md
evals/: battery.py  calibrate.py  controls.py  fresh_corpus.py  gen_path.py  probe_grain.SOURCES.md  probe_grain.txt  review_server.py  score_story.py  vaults.example.json
server/: Launch Dwell Server.bat  backfill_registry.py  dwell.py  dwell_build.py  dwell_endpoints.py  dwell_learn.py  dwell_paths.py  dwell_server.py  dwell_tts.py  dwell_tts_cloud.py  dwell_web.html  okf_export.py  requirements-server.txt  text_figures.py
tests/: dwell_smoke.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+169 files in other folders)
